--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,15 @@ appdirs==1.4.3
 asgiref==3.2.5
 boto3==1.12.30
 botocore==1.15.30
+cairocffi==1.1.0
+CairoSVG==2.4.2
 certifi==2019.11.28
+cffi==1.14.0
 chardet==3.0.4
 click==6.7
 colorama==0.4.3
+cssselect2==0.3.0
+defusedxml==0.6.0
 distlib==0.3.0
 dj-database-url==0.5.0
 Django==3.0.5
@@ -19,6 +24,7 @@ feedparser==5.2.1
 filelock==3.0.12
 gitsome==0.8.4
 gunicorn==20.0.4
+html5lib==1.0.1
 idna==2.9
 importlib-metadata==1.5.0
 jedi==0.15.2
@@ -31,8 +37,10 @@ pluggy==0.13.1
 ply==3.11
 prompt-toolkit==2.0.10
 psycopg2==2.8.4
+pycparser==2.20
 Pygments==2.6.1
 PyInstaller==3.6
+Pyphen==0.9.5
 python-dateutil==2.8.1
 python-jsonrpc-server==0.3.4
 python-language-server==0.31.9
@@ -42,11 +50,14 @@ requests-oauthlib==1.3.0
 s3transfer==0.3.3
 six==1.14.0
 sqlparse==0.3.1
+tinycss2==1.0.2
 ujson==1.35
 uritemplate==3.0.1
 uritemplate.py==3.0.2
 urllib3==1.25.8
 virtualenv==20.0.13
 wcwidth==0.1.9
+WeasyPrint==51
+webencodings==0.5.1
 whitenoise==5.0.1
 zipp==3.1.0
