--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ requests-oauthlib==1.3.0
 s3transfer==0.3.3
 six==1.14.0
 sqlparse==0.3.1
+stripe==2.45.0
 tinycss2==1.0.2
 ujson==1.35
 uritemplate==3.0.1
